Fix chat text overflow

--- a/src/components/chat/index.scss
+++ b/src/components/chat/index.scss
@@ -39,6 +39,7 @@ $avatar-size: 2.25rem;
   width: 100%;
 
   .message {
+    box-sizing: border-box;
     display: flex;
     padding: 0 0 $padding $padding;
     width: 100%;
@@ -88,7 +89,7 @@ $avatar-size: 2.25rem;
   .info {
     display: flex;
     width: 100%;
-    margin: 0 $margin-extra-small $margin-extra-small 0;
+    margin: 0 0 $margin-extra-small 0;
   }
 
   .name {
@@ -108,7 +109,10 @@ $avatar-size: 2.25rem;
   }
 
   .text {
+    box-sizing: border-box;
+    padding: 0 $padding-extra-small 0 0;
     width: 100%;
+    word-break: break-word;
   }
 
   .inactive {
